# Changelog

// Asciidoc template for a single table row. Copy the lines
// within //// ... //// over into the current, unreleased version
// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛🐣🗑️✨
|
| https://github.com/knative/client/pull/[#]
////

## v0.22.0 (2021-04-06)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add `context.Context` parameter to API functions
| https://github.com/knative/client/pull/1274[#1274]

| 🎁
| Add `kn domain` CRUD commands to manage domain mappings
| https://github.com/knative/client/pull/1267[#1267]

| ✨
| Add support for namespaces for all commands that takes a `--sink` option
| https://github.com/knative/client/pull/1264[#1264]

| 🐛
| Fix memory leak on closed watch channel
| https://github.com/knative/client/pull/1263[#1263]

| ✨
| Update `CustomResourceDefinition`'s API version to `v1`
| https://github.com/knative/client/issues/1248[#1248]

| 🎁
| Add `S` column to specify built-in sources in `kn source list-types`
| https://github.com/knative/client/pull/1246[#1246]

| 🎁
| Add `--prune` and `--prune-all` options to delete the unreferenced revisions
| https://github.com/knative/client/pull/1217[#1217]

| 🐛
| Fix `kn export` to always honor mode irrespective of revisions flag and have _Export_ as the default mode
| https://github.com/knative/client/pull/1212[#1212]
|===

## v0.21.0 (2021-02-23)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add `--context` and `--cluster` flags to choose specific context from kubeconfig
| https://github.com/knative/client/pull/1234[#1234]

| ✨
| Enable _errorlint_, _gosec_ and _unparam_ linter
| https://github.com/knative/client/pull/1223[#1223]

| 🐣
| Drop `pkg/errors` dependency and replace with stdlib usage
| https://github.com/knative/client/pull/1221[#1221]


| 🐣