@@ -50,7 +50,7 @@ func NewTriggerListCommand(p *commands.KnParams) *cobra.Command {
 			if err != nil {
 				return err
 			}
-			if len(triggerList.Items) == 0 {
+			if !triggerListFlags.GenericPrintFlags.OutputFlagSpecified() && len(triggerList.Items) == 0 {
 				fmt.Fprintf(cmd.OutOrStdout(), "No triggers found.\n")
 				return nil
 			}
