@@ -12,6 +12,16 @@
 | https://github.com/knative/client/pull/[#]
 ////
 
+## (Unreleased)
+[cols="1,10,3", options="header", width="100%"]
+|===
+| | Description | PR
+
+|🐛
+| Respect `-o` in `list` commands in case if no data present
+| https://github.com/knative/client/pull/1276[#1276]
+|===
+
 ## v0.22.0 (2021-04-06)
 [cols="1,10,3", options="header", width="100%"]
 |===
